[package]
name = "laudekoodibotti"
version = "0.1.0"
authors = ["HoolaBoola <jaime.heikkiladias@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carapax = "0.5.0"
tokio = {version = "0.2.13", features = ["full"]}
bytes = "0.5.4"
reqwest = "0.10.4"
leptess = "0.8.2"
tempfile = "3.1.0"
